# shoal

./: Cargo.toml  README.md  shoal_looper.sh
shoal/: Cargo.toml
shoal-core/: Cargo.toml
shoal-core/src/: client.rs  lib.rs  server.rs
shoal-core/src/client/: errors.rs  messages.rs
shoal-core/src/server/: compactor.rs  conf.rs  coordinator.rs  errors.rs  messages.rs  ring.rs  shard.rs  table.rs  tables.rs  trace.rs  tracing.rs
shoal-core/src/server/tables/: ephemeral.rs  partitions.rs  persistent.rs  storage.rs
shoal-core/src/server/tables/persistent/: sorted.rs  unsorted.rs
shoal-core/src/server/tables/storage/: fs.rs
shoal-core/src/server/tables/storage/fs/: compactor.rs  conf.rs  loader.rs  map.rs  reader.rs
shoal-core/src/shared/: queries.rs  responses.rs  traits.rs
shoal-core/src/shared/queries/: sorted.rs  unsorted.rs
shoal-core/src/shared/traits/: unsorted.rs
shoal-derive/: Cargo.toml
shoal-derive/src/: lib.rs
shoal/examples/: basic.rs  tmdb.rs
shoal/src/: bencher.rs  lib.rs
src/: client.rs  main.rs  server.rs  shared.rs
src/client/: errors.rs
src/server/: args.rs  coordinator.rs  cursor.rs  errors.rs  response.rs  ring.rs  shard.rs  table.rs
src/server/table/: partition.rs
src/shared/: responses.rs  traits.rs
