[workspace]
resolver = "2"

members = [ 
    "shoal",
    "shoal-core",
    "shoal-derive",
]

[workspace.dependencies]
rkyv = { version = "0.8.10", features = ["uuid-1"] }
gxhash = "2.2"
uuid = { version = "1", features = ["v4"] }
glommio = { version = "0.9" }
tokio = { version = "1", features = ["full"] }
kanal = "0.1.0-pre8"
mimalloc = { version = "0.1.0"}
