[package]
name = "shoal-core"
version = "0.1.0"
edition = "2021"

[features]
default = ["server"]
# Enables the server features for Shoal
server = ["glommio"]

[dependencies]
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
config = "0.13" 
gxhash = "2.2"
rkyv = { version = "0.8.9", features = ["uuid-1"] }
rkyv-with = "0.1"
glommio = { version = "0.9", optional = true }
bytes = "1.5"
intmap = "2"
futures = "0.3"
kanal = "0.1.0-pre8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "5.5"

# tracing dependencies
opentelemetry = "0.25"
opentelemetry_sdk = "0.25"
opentelemetry-otlp = "0.25"
tracing = "0.1"
tracing-opentelemetry = "0.26"
tracing-subscriber = "0.3"
