[package]
name = "shoal-core"
version = "0.1.0"
edition = "2021"
description = "The core parts of Shoal. A batteries not included database."
license = "MIT"

[features]
default = ["server"]
# Enables the server features for Shoal
server = ["glommio"]

[dependencies]
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
config = "0.13" 
gxhash = "2.2"
rkyv = { version = "0.8.10", features = ["uuid-1"] }
rkyv-with = "0.1"
glommio = { version = "0.9", optional = true }
bytes = "1.5"
intmap = "2"
futures = "0.3"
kanal = "0.1.0-pre8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
dashmap = "5.5"
papaya = "0.2"
byte-unit = "5.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# tracing dependencies
opentelemetry = "0.28"
opentelemetry_sdk = "0.28"
opentelemetry-otlp = "0.28"
tracing = "0.1"
tracing-opentelemetry = "0.29"
tracing-subscriber = "0.3"
