[package]
name = "shoal-core"
version = "0.1.0"
edition = "2021"
description = "The core parts of Shoal. A batteries not included database."
license = "MIT"

[features]
default = ["server"]
# Enables the server features for Shoal
server = ["glommio"]

[dependencies]
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
config = "0.13" 
gxhash = "2.2"
rkyv = { workspace = true }
rkyv-with = "0.1"
glommio = { workspace = true, optional = true }
bytes = "1.5"
intmap = "2"
futures = "0.3"
kanal = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
papaya = "0.2"
byte-unit = { version = "5.1", features = ["serde"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
deepsize2 = "0.1"
lru = "0.16"
bb8 = "0.8"
async-trait = "0.1"

# tracing dependencies
opentelemetry = "0.28"
opentelemetry_sdk = "0.28"
opentelemetry-otlp = { version = "0.28" }
tracing = "0.1"
tracing-opentelemetry = "0.29"
tracing-subscriber = "0.3"
tonic = { version = "0.8.2", features = ["tls-roots"] }
opentelemetry-semantic-conventions = { version = "0.10.0" }
opentelemetry-proto = { version = "0.1.0"}
