[package]
name = "shoal-derive"
version = "0.1.0"
edition = "2021"
description = "The derive featues for Shoal."
license = "MIT"

[lib]
name = "shoal_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
shoal-core = "0.1.0"
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = { version = "2.0.72", features = ["full"] }
