[package]
name = "shoal"
version = "0.1.0"
edition = "2021"
description = "A batteries not included database."
license = "MIT"

[lib]
name = "shoal"
path = "src/lib.rs"


[dependencies]
shoal-core = { version = "0.1.0", path = "../shoal-core" }
shoal-derive = { version = "0.1.0" }
rkyv = { version = "0.8.10", features = ["uuid-1"] }
gxhash = "2.2"
uuid = { version = "1", features = ["v4"] }
glommio = { version = "0.9" }
tokio = { version = "1", features = ["full"] }
owo-colors = "4.1"
