[package]
name = "shoal"
version = "0.1.0"
edition = "2021"
description = "A batteries not included database."
license = "MIT"

[lib]
name = "shoal"
path = "src/lib.rs"


[dependencies]
shoal-core = { version = "0.1.0", path = "../shoal-core" }
shoal-derive = { version = "0.1.0", path = "../shoal-derive" }
rkyv = { workspace = true }
gxhash = { workspace = true }
uuid = { workspace = true }
glommio = { workspace = true }
tokio = { workspace = true }
owo-colors = "4.1"
kanal = { workspace = true }
mimalloc = { workspace = true }

[dev-dependencies]
csv-async = { version = "1.3", features = ["tokio", "with_serde"] }
serde = "1.0.219"
futures = "0.3"
kanal = "0.1.0-pre8"
deepsize2 = "0.1"
core_affinity = "0.8"
